fix z-index bug on header

--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,10 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+header {
+	z-index: 100;
+}
+
 ul {
 	padding: 0;
 }
